@@ -54,10 +54,15 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
     // we are using the same constructor for usual and meta- classes
     defaultConstructor: function () {
         return function (skipTraitsAnchor, params) {
+            
             var thisMeta    = this.meta
             var skipTraits  = skipTraitsAnchor == thisMeta.skipTraitsAnchor
             
-            var props   = this.BUILD.apply(this, skipTraits ? params : arguments)
+            var BUILD       = this.BUILD
+            
+            var props       = BUILD && BUILD.apply(this, skipTraits ? params : arguments) || (skipTraits ? params : skipTraitsAnchor) || {}
+            
+            
             // either looking for traits in __extend__ (meta-class) or in usual props (usual class)
             var extend  = props.__extend__ || props
             
