@@ -121,6 +121,51 @@ There is also another form of this call : `this.SUPERARG(arg)` In this form, arg
 Note that Joose allows a single parent class only. As cleaner alternative to multiple inheritance approach, Joose provides Roles mechanism. See [Joose.Manual.Roles][4].
 
 
+SUBCLASSING NON-JOOSE CLASSES
+=============================
+
+You can subclass non-Joose classes as well: 
+
+        require('joose')
+        
+        var EventEmitter    = require('events').EventEmitter
+        var puts            = require('sys').puts
+        
+        Class('My.Class', {
+            
+            meta : Joose.Meta.Class,
+        
+            isa : EventEmitter,
+            
+            
+            before : {
+            
+                emit : function (event) {
+                    puts('Emitting event [' + event + ']')
+                }
+            }
+        })
+        
+        
+        var obj = new My.Class()
+        
+        obj.emit('yo') // Emitting event [yo]
+        
+        puts(EventEmitter.meta.hasMethod('emit')) // true
+
+
+Things to note:
+
+- Joose *will alter* the superclass - it will create a `meta` property in it's prototype and constructor.
+  Actually it will turn the superclass into Joose class, just with `meta` of the lower level. 
+
+- Always specify the desired meta-class (Joose.Meta.Class usually).
+
+- Reflection will also work with properties inherited from non-Joose classes. Every `function` in the prototype 
+of such class will be considered as a "method" (unless it has a `meta` attached). Everything else will be considered as
+"attribute". 
+
+
 
 AUTHOR
 ======
