@@ -170,7 +170,7 @@ Joose.Namespace.Manager = new Joose.Managed.Class('Joose.Namespace.Manager', {
             }
             
             if (!meta)
-                if (props && typeof props.isa == 'function')
+                if (props && typeof props.isa == 'function' && props.isa.meta)
                     meta = props.isa.meta.constructor
                 else
                     meta = defaultMeta
