@@ -96,8 +96,7 @@
         
         
         processStem : function () {
-            // '|| {}' for non-Joose superclasses
-            var superMeta       = this.superClass.meta || {}
+            var superMeta       = this.superClass.meta
             
             this.methods        = Joose.O.getMutableCopy(superMeta.methods || {})
             this.attributes     = Joose.O.getMutableCopy(superMeta.attributes || {})
@@ -110,8 +109,10 @@
         
         
         defaultConstructor: function () {
-            return function () {
-                var args = this.BUILD.apply(this, arguments)
+            return function (arg) {
+                var BUILD = this.BUILD
+                
+                var args = BUILD && BUILD.apply(this, arguments) || arg || {}
                 
                 var thisMeta    = this.meta
                 
@@ -123,8 +124,25 @@
         
         
         processSuperClass: function (superClass) {
-            this.c.prototype    = Joose.O.getMutableCopy(superClass.prototype)
-            this.c.superClass   = superClass.prototype
+            var superProto      = superClass.prototype
+            
+            //non-Joose superclasses
+            if (!superClass.meta) {
+                
+                var extend = Joose.O.copy(superProto)
+                
+                extend.isa = Joose.Proto.Empty
+                
+                
+                var meta = new this.defaultSuperClass.meta.constructor(null, extend)
+                
+                superClass.meta = superProto.meta = meta
+                
+                meta.c = superClass
+            }
+            
+            this.c.prototype    = Joose.O.getMutableCopy(superProto)
+            this.c.superClass   = superProto
         },
         
         
